--- a/webapp/.vscode/launch.json
+++ b/webapp/.vscode/launch.json
@@ -6,8 +6,10 @@
     "configurations": [
       {
         "type": "firefox",
-        "request": "attach",
-        "name": "Attach"
+        "request": "launch",
+        "name": "Launch Firefox against localhost",
+        "url": "http://localhost:4200",
+        "webRoot": "${workspaceFolder}"
       },
         {
             "type": "chrome",
