--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^10.1.6",
     "@types/chart.js": "^2.9.27",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-annotation": "^0.5.7",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
